--- a/index.html
+++ b/index.html
@@ -11,59 +11,14 @@
       <h1>Atletas do Brasil</h1>
     </header>
     <main>
+
       <section>
         <input type="text" placeholder="Digite o nome do seu atleta" />
-        <button>Pesquisar</button>
+        <button onclick="pesquisar()">Pesquisar</button>
       </section>
-      <section class="resultados-pesquisa">
-        <div class="item-resultado">
-          <h2>
-            <a href="#" target="_blank">Rebeca Andrade</a>
-          </h2>
-          <p class="descricao-meta">
-            Rebeca Andrade é uma ginasta artística brasileira que conquistou o
-            coração dos brasileiros e se tornou um dos maiores nomes do esporte
-            nacional. Com sua força, determinação e talento, ela coleciona
-            medalhas em competições nacionais e internacionais, incluindo ouro
-            olímpico. 
-          </p>
-          <a href="https://pt.wikipedia.org/wiki/Rebeca_Andrade" target="_blank"
-            >Mais informações</a
-          >
-        </div>
 
-        <div class="item-resultado">
-          <h2>
-            <a href="#" target="_blank">Rayssa Leal</a>
-          </h2>
-          <p class="descricao-meta">
-            Rayssa Leal, conhecida como "Fadinha", é uma skatista profissional
-            brasileira que, desde muito jovem, encanta o mundo com seu talento e
-            carisma. Aos 13 anos, tornou-se a mais jovem medalhista olímpica da
-            história do Brasil, conquistando a prata nos Jogos Olímpicos de
-            Tóquio. 
-          </p>
-          <a href="https://pt.wikipedia.org/wiki/Rayssa_Leal" target="_blank"
-            >Mais informações</a
-          >
-        </div>
-
-        <div class="item-resultado">
-          <h2>
-            <a href="#" target="_blank">Beatriz Souza</a>
-          </h2>
-          <p class="descricao-meta">
-            Beatriz Souza é uma judoca brasileira que se destaca pela sua
-            técnica apurada e determinação dentro do tatame. Com diversas
-            conquistas em competições nacionais e internacionais, Beatriz é um
-            dos principais nomes do judô feminino brasileiro. 
-          </p>
-          <a
-            href="https://pt.wikipedia.org/wiki/Beatriz_Souza"
-            target="_blank"
-            >Mais informações</a
-          >
-        </div>
+      <section class="resultados-pesquisa" id="resultados-pesquisa">
+        <!-- inclusão dos dados de forma dinâmica pelo JS -->
       </section>
     </main>
     <footer>
