--- a/index.html
+++ b/index.html
@@ -6,18 +6,17 @@
     <title>Olimpiadas</title>
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
     <header>
       <h1>Atletas do Brasil</h1>
     </header>
     <main>
-
       <section>
-        <input type="text" placeholder="Digite o nome do seu atleta" />
+        <input id="campo-pesquisa" type="text" placeholder="Digite o nome do um atleta ou esporte" />
         <button onclick="pesquisar()">Pesquisar</button>
       </section>
-
-      <section class="resultados-pesquisa" id="resultados-pesquisa">
+      <section id="resultados-pesquisa" class="resultados-pesquisa">
         <!-- inclusão dos dados de forma dinâmica pelo JS -->
       </section>
     </main>
